--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         </video>
         <div class="video-overlay"></div>
     </div>
+
+    <audio id="bg-audio" src="assets/audio/background.mp3" loop></audio>
+    <audio id="fx-audio" src="assets/audio/narracion.mp3"></audio>
+
     
     <!-- Popup 1 (First - only forward) -->
     <div id="popup1" class="popup-container">
