--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+    <!-- Landing Screen -->
+    <div id="landing">
+        <div class="landing-content">
+            <h1>Antes de empezar</h1>
+            <p>
+                • Asegúrate de que tu pantalla esté en horizontal<br>
+                • Sube el volumen<br><br>
+                Cuando estés listx, presiona EMPEZAR
+            </p>
+            <button id="start-btn">EMPEZAR</button>
+        </div>
+    </div>
+
     <!-- Video container -->
     <div class="video-container">
         <video id="current-video" autoplay muted>
