garantizar carga de primer video

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+
+    <div id="loader">
+        <div class="spinner"></div>
+        <p>Cargando invitación</p>
+    </div>
+
     <!-- Landing Screen -->
     <div id="landing">
         <div class="landing-content">
